test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_visibility/src/lib.sw
library;

pub struct Foo {}
impl Foo {
    const MIN: Self = Self {};
}

impl Foo {
    pub fn foo() {
        let x = Self::MIN;
    }
}