test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_associated_over_associated_function/src/main.sw
library;

struct S {}

impl S {
    fn assoc() -> u8 {
        Self::S_ASSOC
    }
}

impl S {
    const S_ASSOC: u8 = Self::assoc();
}